# siderust

./: .gitattributes  .gitignore  .gitmodules  .mailmap  ACKNOWLEDGMENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  ci-local.sh  license.py  out.txt  verify_pattern.rs
.cargo/: config.toml
.github/workflows/: github-ci.yml  publish.yml  update-datasets.yml
benches/: README.md  altitude_comparison.rs  converters.rs  de441.rs  elp2000.rs  ephemeris_comparison.rs  moon_altitude.rs  sidereal.rs  solar_altitude.rs  spk_perf.rs  star_altitude.rs  vsop87.rs
benches/reports/: README.md  fast_root_finding_brent.md  moon_altitude_chebyshev_cache.md  moon_altitude_perf_report.md  profiling.md  solar_altitude_perf_report.md
data/setup-ci/: coverage.xml
dev-deps/: README.md
doc/: README.md  architecture_decisions.md  conventions.md  datasets.md  fast_root_finding_brent.md  ffi_bindings_matrix.md  frames_and_centers.md  moon_altitude_chebyshev_cache.md  moon_altitude_perf_report.md  profiling.md  promises.md  solar_altitude_perf_report.md
examples/: 01_basic_coordinates.rs  02_coordinate_transformations.rs  03_all_frames_conversions.rs  04_all_center_conversions.rs  05_target_tracking.rs  05_time_periods.rs  06_astronomical_night.rs  06_night_events.rs  07_find_night_periods_365day.rs  07_moon_properties.rs  08_night_quality_scoring.rs  08_solar_system.rs  09_star_observability.rs  10_altitude_periods_trait.rs  10_time_periods.rs  11_compare_sun_moon_star.rs  11_serde_serialization.rs  12_runtime_ephemeris.rs  12_solar_system_example.rs  13_coordinate_operations.rs  13_observer_coordinates.rs  14_bodycentric_coordinates.rs  14_nutation_models.rs  15_orbit_models.rs  15_targets_proper_motion.rs  16_jpl_precise_ephemeris.rs  16_lambert_earth_to_mars.rs  17_serde_serialization.rs  17_sgp4_from_tle.rs  18_kepler_orbit.rs  18_lisa_pod.rs  19_brent_root_finding.rs  20_moon_phase.rs  21_trackable_demo.rs  22_all_center_conversions.rs  24_altitude_periods_trait.rs  27_bodycentric_coordinates.rs  29_compare_sun_moon_star.rs  30_coordinate_transformations.rs  31_find_night_periods_365day.rs  (+28 more)
scripts/: README.md  check_dynamics_coverage.sh  generate-lagrange-cheby.rs  prefetch_datasets.sh  publish-changed.sh  update_generated_tables.sh
scripts/de440/: README.md  daf.rs  fetch.rs  mod.rs
scripts/de441/: README.md  daf.rs  fetch.rs  mod.rs  spk.rs
scripts/elp2000/: mod.rs
scripts/iers/: mod.rs
scripts/jpl/: daf.rs  pipeline.rs  spk.rs
scripts/lagrange/: generate-lagrange-cheby.rs
scripts/vsop87/: codegen.rs  collect.rs  fetch.rs  io.rs  mod.rs
siderust-astrometry/: Cargo.toml
siderust-atmosphere/: Cargo.toml
siderust-atmosphere/src/: lib.rs
siderust-atmosphere/src/atmosphere/: airglow.rs  airmass.rs  mie.rs  mod.rs  ozone.rs  profile.rs  rayleigh.rs  scattering.rs
siderust-bodies/: Cargo.toml
siderust-coordinates/: Cargo.toml
siderust-ephemeris/: Cargo.toml
siderust-ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
siderust-ffi/include/: constops.h  siderust_ffi.h
siderust-ffi/src/: altitude.rs  azimuth.rs  bodies.rs  body.rs  constops_ffi.rs  context.rs  coordinates.rs  dynamics.rs  ephemeris.rs  error.rs  ffi_utils.rs  lambert.rs  lib.rs  observatories.rs  oem.rs  phase.rs  qtty_integration.rs  runtime_ephemeris.rs  sampling.rs  sgp4.rs  subject.rs  target.rs  test_helpers.rs  twilight.rs  types.rs
siderust-ffi/tests/: constops_ffi.rs  dynamics_ffi.rs  ffi_smoke.rs
siderust-mechanics/: Cargo.toml
siderust-numerics/: Cargo.toml
siderust-numerics/src/: lib.rs
siderust-numerics/src/provenance/: checksum.rs
siderust-numerics/src/tables/: algo.rs  error.rs  grid1d.rs  grid2d.rs  grid3d.rs  mod.rs
siderust-observability/: Cargo.toml
siderust-observability/src/: lib.rs
siderust-photometry/: Cargo.toml
siderust-spectra/: Cargo.toml
siderust-spectra/src/: lib.rs
siderust-spectra/src/spectra/: integrate.rs  interp.rs  mod.rs  provenance.rs  sampled.rs
siderust-spectra/src/spectra/loaders/: ascii.rs
siderust-spectra/src/spectra/passbands/: bessell1990.rs  mod.rs
src/: archive.rs  bench_internals.rs  catalogs.rs  checksum.rs  instruments.rs  interp.rs  lib.rs  macros.rs  mission_context.rs  mission_geometry.rs  provenance.rs  qtty.rs  time.rs
src/aircraft/: inner.rs  isa.rs  mod.rs
src/archive/: README.md  datasets.lock.json  mod.rs  pluto_tables.rs  vsop87e.rs
src/astro/: README.md  aberration.rs  apparent.rs  benchmark_models.rs  cio.rs  conic.rs  conic_equations.rs  dynamical_time.rs  earth_rotation.rs  earth_rotation_provider.rs  eop.rs  era.rs  frame_bias.rs  iers_data.rs  julian_date.rs  light_deflection.rs  mod.rs  modified_julian_date.rs  nutation.rs  nutation_iau2000b.rs  orbit.rs  orientation.rs  polar_motion.rs  precession.rs  precession_iau2006.rs  proper_motion.rs  sidereal.rs  units.rs
src/atmosphere/: README.md  airglow.rs  airmass.rs  extinction.rs  mie.rs  mod.rs  ozone.rs  profile.rs  rayleigh.rs  scattering.rs
src/bodies/: README.md  asteroid.rs  catalog.rs  comet.rs  mod.rs  planets.rs  satelite.rs  satellite.rs  solar_system.rs  stars.rs
src/calculus/: README.md  altitude.rs  conic_equations.rs  mod.rs  (+3 more)
tests/: astro_nights_roque_2026.rs  lagrange_centers.rs  pod_smoke.rs  spice_context.rs  tes_target_transform.rs  test_additional_coverage.rs  test_altitude_api.rs  test_altitude_provider.rs  test_angular_separation.rs  test_asteroid.rs  test_astro_frame_bias.rs  test_astro_nights_roque_2026.rs  test_azimuth_api.rs  test_bodies.rs  test_cartesian.rs  test_cartesian_direction.rs  test_cartesian_vector.rs  test_coordinates.rs  test_domain_b.rs  test_ellipsoidal_geodesy.rs  test_ephemeris.rs  test_event_search.rs  test_high_precision_earth_rotation_regression.rs  test_iau_compliance.rs  test_jpl_real_backend.rs  test_moon_phase.rs  test_new_coordinate_systems.rs  test_planets.rs  test_root_finding.rs  test_satelite.rs  test_satellite.rs  test_serde.rs  test_spherical_frames.rs  test_spk_runtime.rs  test_stars.rs  test_stellar.rs  test_target_transform.rs  test_time.rs  test_units.rs  test_vsop87e_vel.rs  (+2 more)
(+699 files in other folders)
