[package]
name = "siderust"
version = "0.4.0"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "High-precision astronomy and satellite mechanics in Rust."
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/Siderust/siderust"
homepage = "https://github.com/Siderust/siderust"
keywords = ["astronomy", "satellite", "orbital-mechanics", "vsop87", "rust"]
categories = ["science", "aerospace", "simulation"]

[lib]
name = "siderust"

[features]
default = []
serde = ["dep:serde", "qtty/serde", "affn/serde"]
de440 = []
de441 = []

[dependencies]
affn = { path = "affn", features = ["astro"] }
cheby = { path = "cheby" }
qtty = "0.3.0"
approx = "0.5"
chrono = "0.4.43"
nalgebra = "0.34.1"
paste = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
wide = "0.7"

[dev-dependencies]
rstest = "0.26"
criterion = "0.8.1"
serde_json = "1.0"

[build-dependencies]
walkdir = "2"
regex = "1.12.2"
anyhow = "1.0.100"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking"] }

[[bench]]
name = "converters"
harness = false

[[bench]]
name = "vsop87"
harness = false

[[bench]]
name = "solar_altitude"
harness = false

[[bench]]
name = "moon_altitude"
harness = false

[[bench]]
name = "star_altitude"
harness = false

[[bench]]
name = "elp2000"
harness = false

[[bench]]
name = "de441"
harness = false
required-features = ["de441"]

[[example]]
name = "serde_serialization"
required-features = ["serde"]

[[example]]
name = "de441_precise_ephemeris"
required-features = ["de441"]

[profile.release]
debug = true
strip = "none"   # or remove any strip setting
lto = "thin"

[profile.release.build-override]
opt-level = 3
