[workspace]
members = [".", "siderust-ffi"]
exclude = ["dev-deps/**"]

[package]
name = "siderust"
version = "0.5.2"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "High-precision astronomy and satellite mechanics in Rust."
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/Siderust/siderust"
homepage = "https://github.com/Siderust/siderust"
keywords = ["astronomy", "satellite", "orbital-mechanics", "vsop87", "rust"]
categories = ["science", "aerospace", "simulation"]
exclude = ["dev-deps/**"]

[lib]
name = "siderust"

[features]
default = []
de440 = []
runtime-data = ["dep:ureq", "dep:sha2"]
serde = ["dep:serde", "qtty/serde", "affn/serde", "tempoch/serde"]

[dependencies]
affn = { version="0.3.3", features = ["astro"] }
cheby = "0.1.0"
qtty = "0.4.0"
tempoch = "0.3"
approx = "0.5"
chrono = "0.4.44"
nalgebra = "0.34.1"
paste = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
sha2 = { version = "0.10", optional = true }
ureq = { version = "2.12", optional = true, default-features = false, features = ["tls"] }
wide = "1.1.1"

[dev-dependencies]
rstest = "0.26"
criterion = "0.8.1"
serde_json = "1.0"

[build-dependencies]
walkdir = "2"
regex = "1.12.2"
anyhow = "1.0.102"
reqwest = { version = "0.13.2", default-features = false, features = ["blocking", "rustls"] }

[patch.crates-io]
affn = { path = "dev-deps/affn" }
cheby = { path = "dev-deps/cheby" }
tempoch = { path = "dev-deps/tempoch/tempoch" }

[[bench]]
name = "converters"
harness = false

[[bench]]
name = "vsop87"
harness = false

[[bench]]
name = "solar_altitude"
harness = false

[[bench]]
name = "moon_altitude"
harness = false

[[bench]]
name = "star_altitude"
harness = false

[[bench]]
name = "elp2000"
harness = false

[[bench]]
name = "ephemeris_comparison"
harness = false

[[bench]]
name = "altitude_comparison"
harness = false
