[workspace]
members = [
    ".",
    "siderust-ffi",
]

[workspace.lints.rust]
unsafe_code     = "forbid"
missing_docs    = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
all           = { level = "deny", priority = -1 }
todo          = "deny"
unimplemented = "deny"
dbg_macro     = "deny"
print_stdout  = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"

[package]
name = "siderust"
version = "0.8.0"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "High-precision astronomy and satellite mechanics in Rust."
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/Siderust/siderust"
homepage = "https://github.com/Siderust/siderust"
keywords = ["astronomy", "satellite", "orbital-mechanics", "vsop87", "rust"]
categories = ["science", "aerospace", "simulation"]

[lib]
name = "siderust"

[[example]]
name = "16_lambert_earth_to_mars"
path = "examples/16_lambert_earth_to_mars.rs"
required-features = ["pod"]

[[example]]
name = "17_sgp4_from_tle"
path = "examples/17_sgp4_from_tle.rs"
required-features = ["pod"]

[[example]]
name = "18_lisa_pod"
path = "examples/18_lisa_pod.rs"
required-features = ["pod"]

[[test]]
name = "pod_smoke"
path = "tests/pod_smoke.rs"
required-features = ["pod"]

[[test]]
name = "tle_sgp4_pipeline"
path = "tests/tle_sgp4_pipeline.rs"
required-features = ["pod"]

[[test]]
name = "spice_context"
path = "tests/spice_context.rs"
required-features = ["spice"]

[features]
default = ["serde"]
de440 = []
lagrange-centers = ["serde", "siderust-archive/lagrange"]
runtime-data = ["siderust-archive/fetch"]
serde = ["dep:serde", "dep:serde_json", "qtty/serde", "affn/serde", "tempoch/serde"]
photometry = []
spice = []
atmosphere = []
doris = []
## Precise Orbit Determination (POD) toolkit. Folded from the former `siderust-pod` crate.
pod = ["serde", "dep:faer", "dep:hex", "dep:sha2"]
## Parquet residuals writer in the `pod::product` module.
pod-parquet = ["pod", "dep:parquet"]
## DORIS RINEX observation parser inside `pod::io`.
pod-doris = ["pod", "doris"]

[dependencies]
affn = { version = "0.7", features = ["astro"] }
cheby = "0.3"
keplerian = "0.2"
optica = "0.1"
principia = { version = "0.2", features = ["alloc"] }
qtty = { version = "0.8", features = ["astro", "density", "frequency", "radiometry", "satellite"] }
tempoch = "0.6.3"
siderust-archive = { version = "0.1", features = ["jpl", "vsop", "elp", "nutation", "gravity", "atmosphere", "pluto", "time"] }

thiserror = "2"
approx = "0.5"
chrono = "0.4"
paste = "1.0"
quick-xml = "0.40"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
sha2 = { version = "0.11", optional = true }
wide = "1.4"

# POD toolkit dependencies (gated on the `pod` feature family)
faer = { version = "0.22", default-features = false, features = ["std", "linalg"], optional = true }
hex = { version = "0.4", optional = true }
parquet = { version = "58", default-features = false, optional = true }

[dev-dependencies]
rstest = "0.26"
criterion = "0.8"
serde_json = "1.0"

[build-dependencies]

[[bench]]
name = "converters"
harness = false

[[bench]]
name = "vsop87"
harness = false

[[bench]]
name = "solar_altitude"
harness = false

[[bench]]
name = "moon_altitude"
harness = false

[[bench]]
name = "star_altitude"
harness = false

[[bench]]
name = "elp2000"
harness = false

[[bench]]
name = "ephemeris_comparison"
harness = false

[[bench]]
name = "altitude_comparison"
harness = false

[lints]
workspace = true
