[package]
name = "siderust-atmosphere"
version = "0.6.1"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Atmospheric models (ozone, Rayleigh/Mie scattering, airglow, extinction) for siderust."
license = "AGPL-3.0"
repository = "https://github.com/Siderust/siderust"

[lib]
name = "siderust_atmosphere"

[dependencies]
siderust-numerics = { path = "../siderust-numerics" }
siderust-spectra = { path = "../siderust-spectra" }
qtty = { version = "0.6.1", features = ["radiometry"] }

[dev-dependencies]
approx = "0.5"
