[package]
name = "siderust-ffi"
version = "0.5.0"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "C FFI bindings for siderust, high-precision astronomy library."
license = "AGPL-3.0-only"
repository = "https://github.com/Siderust/siderust"

[lib]
name = "siderust_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
serde = ["siderust/serde"]
de440 = ["siderust/de440"]
runtime-data = ["siderust/runtime-data"]


[dependencies]
siderust    = { version = "0.8", path = ".." }
principia   = { version = "0.1", features = ["alloc"] }
qtty        = "0.8"
tempoch     = "0.6"
tempoch-ffi = "0.6"
affn        = { version = "0.7", features = ["astro"] }
serde_json  = { version = "1.0", optional = true }
tokio       = { version = "1.39", features = ["rt"], optional = true }

[build-dependencies]
cbindgen = "0.29.2"

[dev-dependencies]
chrono     = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1.0"

[lints]
workspace = true
