[package]
name = "siderust-ffi"
version = "0.5.0"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "C FFI bindings for siderust, high-precision astronomy library."
license = "AGPL-3.0-only"
repository = "https://github.com/Siderust/siderust"
publish    = false

[lib]
name = "siderust_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
serde = ["siderust/serde"]
de440 = ["siderust/de440"]
runtime-data = ["siderust/runtime-data"]


[dependencies]
siderust    = { version = "0.8", path = ".." }
keplerian   = "0.2"
principia   = { version = "0.2", features = ["alloc"] }
qtty        = "0.8"
tempoch     = "0.6"
tempoch-ffi = "0.6"
affn        = { version = "0.7", features = ["astro"] }
serde_json  = { version = "1.0", optional = true }
tokio       = { version = "1.39", features = ["rt"], optional = true }

[build-dependencies]
cbindgen = "0.29.2"

[dev-dependencies]
chrono     = { version = "0.4", default-features = false, features = ["clock"] }
serde_json = "1.0"

[lints.rust]
unsafe_code = "allow"
missing_docs = "deny"
unreachable_pub = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
print_stdout = "warn"

[lints.rustdoc]
broken_intra_doc_links = "deny"
