[package]
name = "siderust-numerics"
version = "0.6.1"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Interpolation, typed data tables, and data provenance primitives for siderust."
license = "AGPL-3.0"
repository = "https://github.com/Siderust/siderust"

[lib]
name = "siderust_numerics"

[features]
default = []
tables = []

[dependencies]
qtty = { version = "0.6.1", features = ["radiometry"] }
