[package]
name = "siderust-spectra"
version = "0.6.1"
edition = "2021"
authors = ["VPRamon <vallespuigramon@gmail.com>"]
description = "Typed sampled spectra, passband filters, and spectral integration for siderust."
license = "AGPL-3.0"
repository = "https://github.com/Siderust/siderust"

[lib]
name = "siderust_spectra"

[dependencies]
siderust-numerics = { path = "../siderust-numerics" }
qtty = { version = "0.6.1", features = ["radiometry"] }

[dev-dependencies]
approx = "0.5"
